--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class=col-md-1></div>
-        <a class=" navbar-brand col-md-2" href="#" style="background-color:rgb(14, 218, 156)">Adam Parsons</a>
+        <!-- <div class=col-md-1></div> -->
+        <a class=" navbar-brand " href="#" style="background-color:rgb(14, 218, 156)">Adam Parsons</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="col-md-6"></div>
-        <div class="collapse navbar-collapse col-md-3" id="navbarNav">
+        <!-- <div class="col-md-6"></div> -->
+        <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
@@ -38,17 +38,45 @@
     </nav>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div classc="col-md-3">
+                    <img src="profile picture.jpg">
+                </div>
+                <div classc="col-md-3">
+                    <img src="profile picture.jpg">
+                </div>
+            </div>
+            <div class="row">
+                <div classc="col-md-3">
+                    <img src="profile picture.jpg">
+                </div>
+                <div classc="col-md-3">
+                    <img src="profile picture.jpg">
+                </div>
+            </div>
+            <div class="row">
+                <div classc="col-md-3">
+                    <img src="profile picture.jpg">
+                </div>
+                <div classc="col-md-3">
+                    <img src="profile picture.jpg">
+                </div>
+            </div>
+        </div>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
