--- a/portfolio.html
+++ b/portfolio.html
@@ -13,70 +13,109 @@
     <title>Portfolio</title>
 </head>
 
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <!-- <div class=col-md-1></div> -->
-        <a class=" navbar-brand " href="#" style="background-color:rgb(14, 218, 156)">Adam Parsons</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- <div class="col-md-6"></div> -->
-        <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
+    <header>
+        <div class="container" style="background-color: slategray;">
+            <nav class="navbar navbar-expand-lg navbar-dark pl-0  h-100">
+                <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
+                    Parsons</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Portfolio<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </header>
 
 
-    <div class="card">
-        <div class="card-body">
+
+    <main>
+        <div class="container" style="background-color: blanchedalmond;">
             <div class="row">
-                <div classc="col-md-3">
-                    <img src="profile picture.jpg">
-                </div>
-                <div classc="col-md-3">
-                    <img src="profile picture.jpg">
-                </div>
-            </div>
-            <div class="row">
-                <div classc="col-md-3">
-                    <img src="profile picture.jpg">
-                </div>
-                <div classc="col-md-3">
-                    <img src="profile picture.jpg">
-                </div>
-            </div>
-            <div class="row">
-                <div classc="col-md-3">
-                    <img src="profile picture.jpg">
-                </div>
-                <div classc="col-md-3">
-                    <img src="profile picture.jpg">
+                <div class="col-md-9">
+                    <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
+                        <div class=" card-body">
+                            <h2 class="card-title">Portfolio</h2>
+                            <div class="container">
+                                <div class="row pb-5">
+                                    <div class="col-md-6">
+                                        <img src="stock1.jpg" class="card-img-top img-fluid">
+                                        <div class="card-img-overlay">
+                                            <h5 class="card-title text-center text-bottom text-white "
+                                                style="background-color:slategray">Word Guess</h5>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img src="stock2.jpg" class="card-img-top img-fluid">
+                                        <div class="card-img-overlay">
+                                            <h5 class="card-title text-center text-bottom text-white"
+                                                style="background-color:slategray">RPG Game</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row pb-5">
+                                    <div class="col-md-6">
+                                        <img src="stock3.jpg" class="card-img-top img-fluid">
+                                        <div class="card-img-overlay">
+                                            <h5 class="card-title text-center text-bottom text-white"
+                                                style="background-color:slategray">Trivia Game</h5>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <img src="stock4.jpg" class="card-img-top img-fluid">
+                                        <div class="card-img-overlay">
+                                            <h5 class="card-title text-center text-bottom text-white"
+                                                style="background-color:slategray">Info Widget</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row pb-5">
+                                    <div class="col-md-6">
+                                        <img src="stock5.jpg" class="card-img-top img-fluid">
+                                        <div class="card-img-overlay">
+                                            <h5 class="card-title text-center text-bottom text-white"
+                                                style="background-color:slategray">Rock Paper
+                                                Scissors</h5>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </main>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
