--- a/contact.html
+++ b/contact.html
@@ -10,32 +10,73 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Portfolio</title>
+    <title>Contact</title>
 </head>
 
+
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class=col-md-1></div>
-        <a class=" navbar-brand col-md-2" href="#" style="background-color:rgb(14, 218, 156)">Adam Parsons</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="col-md-6"></div>
-        <div class="collapse navbar-collapse col-md-3" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Contact<span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+    <header>
+        <div class="container" style="background-color: slategray;">
+            <nav class="navbar navbar-expand-lg navbar-dark pl-0  h-100">
+                <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
+                    Parsons</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Contact<span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </nav>
+    </header>
+
+    <main>
+
+        <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
+                        <div class="card-body">
+                            <h2 class="card-title">Contact</h2>
+
+                            <form>
+                                <div class="form-group">
+                                    <label for="nameInput">Name</label>
+                                    <input type="text" class="form-control" id="nameInput" placeholder="John Smith">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="emailInput">Email address</label>
+                                    <input type="email" class="form-control" id="emailInput"
+                                        placeholder="name@example.com">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="messageInput">Message</label>
+                                    <textarea class="form-control" id="messageInput" placeholder="Dear Adam..."
+                                        rows="6"></textarea>
+                                </div>
+                                <button class="btn btn-secondary" type="submit">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
 
 
     <!-- Optional JavaScript -->
