--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <main>
-        <div class="container" style="background-color: blanchedalmond;">
+        <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
             <div class="row">
                 <div class="col-md-9">
                     <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
