--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
 
 
     <main>
-        <div class="container" style="background-color: blanchedalmond;">
+        <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
             <div class="row">
                 <div class="col-md-9">
                     <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
