--- a/contact.html
+++ b/contact.html
@@ -16,16 +16,16 @@
 
 
 <body>
-    <header>
+    <header class="sticky-top">
         <div class="container" style="background-color: slategray;">
-            <nav class="navbar navbar-expand-lg navbar-dark pl-0  h-100">
+            <nav class="navbar navbar-expand-sm navbar-dark pl-0  h-100">
                 <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
                     Parsons</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">About</a>
@@ -46,10 +46,10 @@
 
         <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
             <div class="row">
-                <div class="col-md-9">
-                    <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
+                <div class="col-lg-9">
+                    <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
                         <div class="card-body">
-                            <h2 class="card-title">Contact</h2>
+                            <h2 class="card-title display-4 text-muted">Contact</h2>
 
                             <form>
                                 <div class="form-group">
