--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <title>About Me</title>
 </head>
 
-<header>
+<header class="sticky-top">
     <div class="container" style="background-color: slategray;">
-        <nav class="navbar navbar-expand-lg navbar-dark pl-0  h-100">
+        <nav class="navbar navbar-expand-sm navbar-dark pl-0  h-100">
             <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
                 Parsons</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
                 <ul class="navbar-nav ">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
@@ -45,10 +45,10 @@
     <main>
         <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
             <div class="row">
-                <div class="col-md-9">
-                    <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
+                <div class="col-lg-9">
+                    <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
                         <div class="card-body">
-                            <h2 class="card-title">About Me</h2>
+                            <h2 class="card-title display-4 text-muted">About Me</h2>
                             <img src="profile picture.jpg" alt="Profile picture of Adam Parsons"
                                 class="img-fluid float-left mr-2" style="max-width:300px">
                             <p class="ml-2">
