--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,16 @@
 
 
 <body>
-    <header>
+    <header class="sticky-top">
         <div class="container" style="background-color: slategray;">
-            <nav class="navbar navbar-expand-lg navbar-dark pl-0  h-100">
+            <nav class="navbar navbar-expand-sm navbar-dark pl-0  h-100">
                 <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
                     Parsons</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">About</a>
@@ -46,20 +46,20 @@
     <main>
         <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
             <div class="row">
-                <div class="col-md-9">
-                    <div class="card mt-3 ml-5" style="background-image: url('leather_1.png');">
+                <div class="col-lg-9">
+                    <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
                         <div class=" card-body">
-                            <h2 class="card-title">Portfolio</h2>
+                            <h2 class="card-title display-4 text-muted">Portfolio</h2>
                             <div class="container">
-                                <div class="row pb-5">
-                                    <div class="col-md-6">
-                                        <img src="stock1.jpg" class="card-img-top img-fluid">
+                                <div class="row mt-3">
+                                    <div class="col-md-6 pb-4 ">
+                                        <img src="stock1.jpg" class="card-img-top img-fluid ">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white "
                                                 style="background-color:slategray">Word Guess</h5>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 pb-4 ">
                                         <img src="stock2.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
@@ -67,15 +67,15 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row pb-5">
-                                    <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-md-6 pb-4">
                                         <img src="stock3.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
                                                 style="background-color:slategray">Trivia Game</h5>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 pb-4 ">
                                         <img src="stock4.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
@@ -83,8 +83,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row pb-5">
-                                    <div class="col-md-6">
+                                <div class="row ">
+                                    <div class="col-md-6 pb-4">
                                         <img src="stock5.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
