--- a/index.html
+++ b/index.html
@@ -10,96 +10,71 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css.css">
 
     <title>About Me</title>
 </head>
 
-<header class="sticky-top">
-    <div class="container" style="background-color: slategray;">
-        <nav class="navbar navbar-expand-sm navbar-dark pl-0  h-100">
-            <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
-                Parsons</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
-                <ul class="navbar-nav ">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-</header>
 
 <body>
+    <!--Sticks header element to top  -->
+    <header class="sticky-top">
+        <!--Container is used to allow link elements justified to end  -->
+        <div class="container" style="background-color: slategray;">
+            <!-- expand above small break point. left padding removed for content alignment -->
+            <nav class="navbar navbar-expand-sm navbar-dark pl-0  h-100">
+                <!-- left margin expanded to align content -->
+                <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
+                    Parsons</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- link elements justified to end of container -->
+                <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+
     <main>
         <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
             <div class="row">
+                <!-- column keeps text to left below large breakpoint -->
                 <div class="col-lg-9">
+                    <!-- left margin below large breakpoint for alignment -->
                     <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
                         <div class="card-body">
                             <h2 class="card-title display-4 text-muted">About Me</h2>
+                            <!-- image floated for text wrapping -->
                             <img src="profile picture.jpg" alt="Profile picture of Adam Parsons"
                                 class="img-fluid float-left mr-2" style="max-width:300px">
                             <p class="ml-2">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at enim in quam tincidunt
-                                molestie.
-                                In et lectus ut est rhoncus sollicitudin. Quisque eu nisi a diam ultrices lacinia. Nunc
-                                sed
-                                ornare nisi. Duis placerat lobortis turpis ac bibendum. Mauris rutrum felis vel metus
-                                pulvinar,
-                                vel vehicula nibh tincidunt. Ut convallis eu sem quis pellentesque. Nam a accumsan erat.
-                                Nullam
-                                posuere efficitur velit eget ultricies. Vivamus sed ex et nisi iaculis consectetur.
-
-                                Pellentesque neque nisi, dictum at pulvinar non, posuere nec erat. Quisque dictum velit
-                                at
-                                mauris hendrerit condimentum. Morbi volutpat efficitur scelerisque. Nulla non urna et
-                                sapien
-                                pellentesque suscipit eget et mi. Sed congue sit amet massa at auctor. Praesent molestie
-                                arcu ac
-                                risus tempus aliquam. Duis in tellus eget orci commodo vestibulum. Ut scelerisque magna
-                                quis
-                                sollicitudin pretium. Aliquam erat volutpat.
-
-                                Integer et placerat odio, non venenatis eros. Nullam tempor, mauris ut consectetur
-                                lacinia,
-                                dolor augue varius nulla, nec fermentum mauris augue non nisi. Vestibulum pulvinar et
-                                quam
-                                posuere porta. Donec lacinia leo et turpis tincidunt consequat. Maecenas libero mauris,
-                                facilisis nec vulputate id, tempus non ante. Donec tincidunt facilisis pretium. Sed
-                                facilisis
-                                nulla ex, et tempus velit tincidunt ac. In finibus leo quis massa viverra tincidunt.
-                                Mauris
-                                elit
-                                massa, luctus gravida placerat in, gravida a diam. Maecenas a risus aliquet, suscipit
-                                augue
-                                a,
-                                eleifend mauris. Donec mollis, neque a vulputate ullamcorper, neque risus euismod nunc,
-                                et
-                                luctus turpis felis sit amet est. Donec sit amet nunc vehicula, fermentum tellus at,
-                                consequat
-                                nunc.
-
-                                Nunc quis vulputate mauris. Vivamus quis interdum justo. Nunc sagittis purus at sem
-                                vulputate,
-                                in pharetra mauris dapibus. Cras lorem quam, vulputate semper ex sollicitudin, malesuada
-                                rutrum
-                                leo. Donec pharetra blandit est, sed gravida leo semper convallis. Praesent tincidunt
-                                blandit
-                                dui eu vestibulum. In vitae iaculis eros. Nulla egestas lectus non bibendum porttitor.
-                                Vestibulum eu venenatis ex, sit amet sagittis urna. Maecenas ac metus id leo vulputate
-                                pellentesque.
+                                Hello, and welcome! My name is Adam Parsons and I am an aspiring web developer living in
+                                Philadelphia Pennsylvania. I've always been fascinatated by anything having to do with
+                                technology, and after a lifetime of coding as a hobby I've decided to take the plunge
+                                and embrace it as my future profession. In any job I've worked, I've been the guy you
+                                could ask about how to write an Excel formula, set up a VPN, or troubleshoot a router so
+                                I'm enjoying being the person to know the least and learn the most for once.
+                            </p>
+                            <p class="ml-2">
+                                In my spare time, my favorite thing to do is travel. In the last few years I've been to
+                                several countries including Italy, Spain, and Mexico. When I'm staying grounded, I'm
+                                often camping across the United States, exploring enviroments from beaches to nature
+                                trails with my wife and son. I love to read anything from comics to novels and my
+                                perfect activity for a rainy day is nothing more than watching a great movie with
+                                friends and a bowl of popcorn.
                             </p>
                         </div>
                     </div>
@@ -107,6 +82,13 @@
             </div>
         </div>
     </main>
+    <div class="container pl-0 pr-0">
+        <footer class="footer py-4  text-white-50" style="background-color:slategray">
+            <div class="container text-center">
+                <small>Copyright &copy; https://ravalash.github.io/ </small>
+            </div>
+        </footer>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
