--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -15,15 +16,20 @@
 
 
 <body>
+    <!--Sticks header element to top  -->
     <header class="sticky-top">
+        <!--Container is used to allow link elements justified to end  -->
         <div class="container" style="background-color: slategray;">
-            <nav class="navbar navbar-expand-sm navbar-dark pl-0  h-100">
-                <a class=" navbar-brand ml-5  " href="#" style="background-color:darkgrey">Adam
+            <!-- expand above small break point. left padding removed for content alignment -->
+            <nav class="navbar navbar-expand-sm navbar-dark pl-0 ">
+                <!-- left margin expanded to align content -->
+                <a class=" navbar-brand ml-5  " href="index.html" style="background-color:darkgrey">Adam
                     Parsons</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <!-- link elements justified to end of container -->
                 <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -44,15 +50,20 @@
 
 
     <main>
+        <!-- container expanded to minimum 100% of screen size -->
         <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
+            <!-- grid is 3 rows of 2 columns above medium breakpoint -->
             <div class="row">
                 <div class="col-lg-9">
+                    <!-- left margin at large breakpoint to align content -->
                     <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
                         <div class=" card-body">
                             <h2 class="card-title display-4 text-muted">Portfolio</h2>
                             <div class="container">
                                 <div class="row mt-3">
+                                    <!-- columns collapse to single at medium breakpoint -->
                                     <div class="col-md-6 pb-4 ">
+                                        <!-- background image expands to match space -->
                                         <img src="stock1.jpg" class="card-img-top img-fluid ">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white "
@@ -103,6 +114,13 @@
             </div>
         </div>
     </main>
+    <div class="container pl-0 pr-0">
+        <footer class="footer py-4  text-white-50" style="background-color:slategray">
+            <div class="container text-center">
+                <small>Copyright &copy; https://ravalash.github.io/ </small>
+            </div>
+        </footer>
+    </div>
 
 
     <!-- Optional JavaScript -->
