Organizing assets into folders

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="assets/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -54,7 +54,7 @@
                 <!-- column keeps text to left below large breakpoint -->
                 <div class="col-lg-9">
                     <!-- left margin keeps content aligned below large breakpoint -->
-                    <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
+                    <div class="card mt-3 ml-lg-5" style="background-image: url('assets/leather_1.png');">
                         <div class="card-body">
                             <h2 class="card-title display-4 text-muted">Contact</h2>
 
