--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <!-- column keeps text to left below large breakpoint -->
                 <div class="col-lg-9">
                     <!-- left margin below large breakpoint for alignment -->
-                    <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
+                    <div class="card mt-3 ml-lg-5" style="background-image: url('assets/leather_1.png');">
                         <div class="card-body">
                             <h2 class="card-title display-4 text-muted">About Me</h2>
                             <!-- image floated for text wrapping -->
-                            <img src="profile picture.jpg" alt="Profile picture of Adam Parsons"
+                            <img src="assets/profile picture.jpg" alt="Profile picture of Adam Parsons"
                                 class="img-fluid float-left mr-2" style="max-width:300px">
                             <p class="ml-2">
                                 Hello, and welcome! My name is Adam Parsons and I am an aspiring web developer living in
