--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-9">
                     <!-- left margin at large breakpoint to align content -->
-                    <div class="card mt-3 ml-lg-5" style="background-image: url('leather_1.png');">
+                    <div class="card mt-3 ml-lg-5" style="background-image: url('assets/leather_1.png');">
                         <div class=" card-body">
                             <h2 class="card-title display-4 text-muted">Portfolio</h2>
                             <div class="container">
@@ -64,14 +64,14 @@
                                     <!-- columns collapse to single at medium breakpoint -->
                                     <div class="col-md-6 pb-4 ">
                                         <!-- background image expands to match space -->
-                                        <img src="stock1.jpg" class="card-img-top img-fluid ">
+                                        <img src="assets/stock1.jpg" class="card-img-top img-fluid ">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white "
                                                 style="background-color:slategray">Word Guess</h5>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4 ">
-                                        <img src="stock2.jpg" class="card-img-top img-fluid">
+                                        <img src="assets/stock2.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
                                                 style="background-color:slategray">RPG Game</h5>
@@ -80,14 +80,14 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 pb-4">
-                                        <img src="stock3.jpg" class="card-img-top img-fluid">
+                                        <img src="assets/stock3.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
                                                 style="background-color:slategray">Trivia Game</h5>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4 ">
-                                        <img src="stock4.jpg" class="card-img-top img-fluid">
+                                        <img src="assets/stock4.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
                                                 style="background-color:slategray">Info Widget</h5>
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="row ">
                                     <div class="col-md-6 pb-4">
-                                        <img src="stock5.jpg" class="card-img-top img-fluid">
+                                        <img src="assets/stock5.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
                                             <h5 class="card-title text-center text-bottom text-white"
                                                 style="background-color:slategray">Rock Paper
