Updating to support link to password generator

--- a/portfolio.html
+++ b/portfolio.html
@@ -103,8 +103,12 @@
                                                 Scissors</h5>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-
+                                    <div class="col-md-6 pb-4">
+                                        <img src="assets/stock6.jpg" class="card-img-top img-fluid">
+                                        <div class="card-img-overlay">
+                                            <a href = "https://ravalash.github.io/Password-Generator/"><h5 class="card-title text-center text-bottom text-white"
+                                                style="background-color:slategray">Password Generator</h5></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
