Updating link to trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,8 +82,10 @@
                                     <div class="col-md-6 pb-4">
                                         <img src="assets/stock3.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
-                                            <h5 class="card-title text-center text-bottom text-white"
-                                                style="background-color:slategray">Trivia Game</h5>
+                                            <a href="https://ravalash.github.io/Code-Quiz/">
+                                                <h5 class="card-title text-center text-bottom text-white"
+                                                    style="background-color:slategray">Trivia Game</h5>
+                                            </a>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4 ">
@@ -106,8 +108,10 @@
                                     <div class="col-md-6 pb-4">
                                         <img src="assets/stock6.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
-                                            <a href = "https://ravalash.github.io/Password-Generator/"><h5 class="card-title text-center text-bottom text-white"
-                                                style="background-color:slategray">Password Generator</h5></a>
+                                            <a href="https://ravalash.github.io/Password-Generator/">
+                                                <h5 class="card-title text-center text-bottom text-white"
+                                                    style="background-color:slategray">Password Generator</h5>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
