updating project links

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,8 +91,10 @@
                                     <div class="col-md-6 pb-4 ">
                                         <img src="assets/stock4.jpg" class="card-img-top img-fluid">
                                         <div class="card-img-overlay">
-                                            <h5 class="card-title text-center text-bottom text-white"
-                                                style="background-color:slategray">Info Widget</h5>
+                                            <a href="https://ravalash.github.io/WeatherDashboard/">
+                                                <h5 class="card-title text-center text-bottom text-white"
+                                                    style="background-color:slategray">Weather Dashboard</h5>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
