Updating links and contact info

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                             <h2 class="card-title display-4 text-muted ml-5 ml-md-0">About Me</h2>
                             <!-- image floated for text wrapping -->
                             <img src="assets/profile picture.jpg" alt="Profile picture of Adam Parsons"
-                                class="img-fluid float-md-left ml-5 ml-md-2 mr-md-2 mb-4 mb-lg-0" style="max-width:300px">
+                                class="img-fluid float-md-left ml-5 ml-md-2 mr-md-2 mb-4 mb-lg-0"
+                                style="max-width:300px">
                             <p class="ml-2">
                                 Hello, and welcome! My name is Adam Parsons and I am an aspiring web developer living in
                                 Philadelphia Pennsylvania. I've always been fascinatated by anything having to do with
@@ -85,7 +86,29 @@
     <div class="container pl-0 pr-0">
         <footer class="footer py-4  text-white-50" style="background-color:slategray">
             <div class="container text-center">
-                <small>Copyright &copy; https://ravalash.github.io/ </small>
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col">
+                        <address>
+                            Phone: 856-465-3345<br>
+                            Email: <a href="mailto:parsons.adamj@gmail.com"
+                                class='text-white-50'>parsons.adamj@gmail.com</a>
+                        </address>
+                    </div>
+                    <div class="col">
+                        <p>
+                            <a href="https://github.com/ravalash" class='text-white-50' target="_blank">Github
+                                Profile</a><br>
+                            <a href="https://www.linkedin.com/in/parsonsadamj" class='text-white-50'
+                                target="_blank">LinkedIn
+                                Profile</a>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p>
+                            <a href="assets/Adam Parsons Resume.pdf" class='text-white-50' target="_blank">Resume</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
