--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,29 @@
     <div class="container pl-0 pr-0">
         <footer class="footer py-4  text-white-50" style="background-color:slategray">
             <div class="container text-center">
-                <small>Copyright &copy; https://ravalash.github.io/ </small>
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col">
+                        <address>
+                            Phone: 856-465-3345<br>
+                            Email: <a href="mailto:parsons.adamj@gmail.com"
+                                class='text-white-50'>parsons.adamj@gmail.com</a>
+                        </address>
+                    </div>
+                    <div class="col">
+                        <p>
+                            <a href="https://github.com/ravalash" class='text-white-50' target="_blank">Github
+                                Profile</a><br>
+                            <a href="https://www.linkedin.com/in/parsonsadamj" class='text-white-50'
+                                target="_blank">LinkedIn
+                                Profile</a>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p>
+                            <a href="assets/Adam Parsons Resume.pdf" class='text-white-50' target="_blank">Resume</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
