--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 
     <title>Portfolio</title>
 </head>
@@ -51,7 +52,8 @@
 
     <main>
         <!-- container expanded to minimum 100% of screen size -->
-        <div class="container" style="background-color: blanchedalmond;min-height: 100vh;">
+        <div class="container"
+            style="background-color: blanchedalmond;min-height: 100vh;font-family: 'Libre Baskerville', serif ">
             <!-- grid is 3 rows of 2 columns above medium breakpoint -->
             <div class="row">
                 <div class="col-lg-9">
@@ -59,61 +61,133 @@
                     <div class="card mt-3 ml-lg-5" style="background-image: url('assets/leather_1.png');">
                         <div class=" card-body">
                             <h2 class="card-title display-4 text-muted">Portfolio</h2>
-                            <div class="container">
+                            <div class="container" style="font-family: 'Libre Baskerville', serif;">
                                 <div class="row mt-3">
                                     <!-- columns collapse to single at medium breakpoint -->
                                     <div class="col-md-6 pb-4 ">
-                                        <!-- background image expands to match space -->
-                                        <img src="assets/stock1.jpg" class="card-img-top img-fluid ">
-                                        <div class="card-img-overlay">
-                                            <h5 class="card-title text-center text-bottom text-white "
-                                                style="background-color:slategray">Word Guess</h5>
+                                        <div class="card text-center"
+                                            style="width: 100%;height:100%; background-color:ivory;color:black">
+                                            <div class="card-header">
+                                                <a href="https://github.com/ravalash/Work-Day-Scheduler"
+                                                    target="_blank">
+                                                    <h5 style="font-weight: bold;color:black">Work Day Scheduler
+                                                    </h5>
+                                                </a>
+                                            </div>
+                                            <a href="https://ravalash.github.io/Work-Day-Scheduler/" target="_blank">
+                                                <img class="card-img-top" src="assets/workday.jpg" alt="Card image cap"
+                                                    style="border:blanchedalmond solid 2px"></a>
+                                            <div class="card-body d-flex align-items-end">
+                                                <p class="card-text">
+                                                    A tool for scheduling your work day and tracking your appointments
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4 ">
-                                        <img src="assets/stock2.jpg" class="card-img-top img-fluid">
-                                        <div class="card-img-overlay">
-                                            <h5 class="card-title text-center text-bottom text-white"
-                                                style="background-color:slategray">RPG Game</h5>
+                                        <div class="card text-center"
+                                            style="width: 100%; height:100%;background-color:ivory;color:black">
+                                            <div class="card-header">
+                                                <a href="https://github.com/ravalash/MarysMovieMachine" target="_blank">
+                                                    <h5 style="font-weight: bold;color:black">Miss Mary's Magical Mini
+                                                        Movie Machine
+                                                    </h5>
+                                                </a>
+                                            </div>
+                                            <a href="https://ravalash.github.io/MarysMovieMachine/" target="_blank">
+                                                <img class="card-img-top" src="assets/missmarymagic.jpg"
+                                                    alt="Card image cap" style="border:blanchedalmond solid 2px"></a>
+                                            <div class="card-body d-flex align-items-end">
+                                                <p class="card-text">
+                                                    An application for teaching students social skills through distance
+                                                    learning
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 pb-4">
-                                        <img src="assets/stock3.jpg" class="card-img-top img-fluid">
-                                        <div class="card-img-overlay">
-                                            <a href="https://ravalash.github.io/Code-Quiz/">
-                                                <h5 class="card-title text-center text-bottom text-white"
-                                                    style="background-color:slategray">Trivia Game</h5>
-                                            </a>
+                                        <div class="card text-center"
+                                            style="width: 100%; height:100%;background-color:ivory;color:black">
+                                            <div class="card-header">
+
+                                                <a href="https://github.com/ravalash/Code-Quiz" target="_blank">
+                                                    <h5 style="font-weight: bold;color:black">Trivia Game
+                                                    </h5>
+                                                </a>
+                                            </div>
+                                            <a href="https://ravalash.github.io/Code-Quiz/" target="_blank"> <img
+                                                    class="card-img-top" src="assets/triviagame.JPG"
+                                                    alt="Card image cap" style="border:blanchedalmond solid 2px"></a>
+                                            <div class="card-body d-flex align-items-end">
+                                                <p class="card-text">
+                                                    A game that challenges users to answer a set of questions with time
+                                                    lost for each question answered wrong
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4 ">
-                                        <img src="assets/stock4.jpg" class="card-img-top img-fluid">
-                                        <div class="card-img-overlay">
-                                            <a href="https://ravalash.github.io/WeatherDashboard/">
-                                                <h5 class="card-title text-center text-bottom text-white"
-                                                    style="background-color:slategray">Weather Dashboard</h5>
-                                            </a>
+                                        <div class="card text-center"
+                                            style="width: 100%; height:100%;background-color:ivory;color:black">
+                                            <div class="card-header">
+                                                <a href="https://github.com/ravalash/WeatherDashboard" target="_blank">
+                                                    <h5 style="font-weight: bold;color:black">Weather Dashboard
+                                                    </h5>
+                                                </a>
+                                            </div>
+                                            <a href="https://ravalash.github.io/WeatherDashboard/" target="_blank"> <img
+                                                    class="card-img-top" src="assets/weatherdashboard.JPG"
+                                                    alt="Card image cap" style="border:blanchedalmond solid 2px"></a>
+                                            <div class="card-body d-flex align-items-end">
+                                                <p class="card-text">
+                                                    A tool for checking current and future weather conditions for
+                                                    different cities and easy storage of frequent searches
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row ">
                                     <div class="col-md-6 pb-4">
-                                        <img src="assets/movieme.jpg" class="card-img-top img-fluid">
-                                        <div class="card-img-overlay">
-                                            <a href="https://ravalash.github.io/MovieMe/"><h5 class="card-title text-center text-bottom text-white"
-                                                style="background-color:slategray">MovieMe
-                                                </h5></a>
+                                        <div class="card text-center"
+                                            style="width: 100%; height:100%;background-color:ivory;color:black">
+                                            <div class="card-header">
+                                                <a href="https://github.com/ravalash/MovieMe" target="_blank">
+                                                    <h5 style="font-weight: bold;color:black">MovieMe
+                                                    </h5>
+                                                </a>
+                                            </div>
+                                            <a href="https://ravalash.github.io/MovieMe/" target="_blank"> <img
+                                                    class="card-img-top" src="assets/movieme.jpg" alt="Card image cap"
+                                                    style="border:blanchedalmond solid 2px"></a>
+                                            <div class="card-body d-flex align-items-end">
+                                                <p class="card-text">
+                                                    A site designed to help movie lovers discover new content based on
+                                                    the films they already love
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4">
-                                        <img src="assets/stock6.jpg" class="card-img-top img-fluid">
-                                        <div class="card-img-overlay">
-                                            <a href="https://ravalash.github.io/Password-Generator/">
-                                                <h5 class="card-title text-center text-bottom text-white"
-                                                    style="background-color:slategray">Password Generator</h5>
-                                            </a>
+                                        <div class="card text-center"
+                                            style="width: 100%; height:100%;background-color:ivory;color:black">
+                                            <div class="card-header">
+                                                <a href="https://github.com/ravalash/Password-Generator"
+                                                    target="_blank">
+                                                    <h5 style="font-weight: bold;color:black">Password Generator
+                                                    </h5>
+                                                </a>
+                                            </div>
+                                            <a href="https://ravalash.github.io/Password-Generator/" target="_blank">
+                                                <img class="card-img-top" src="assets/passwordgenerator.JPG"
+                                                    alt="Card image cap" style="border:blanchedalmond solid 2px"></a>
+                                            <div class="card-body d-flex align-items-end">
+                                                <p class="card-text">
+                                                    A tool for generating random passwords with user defined parameters
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -127,7 +201,29 @@
     <div class="container pl-0 pr-0">
         <footer class="footer py-4  text-white-50" style="background-color:slategray">
             <div class="container text-center">
-                <small>Copyright &copy; https://ravalash.github.io/ </small>
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col">
+                        <address>
+                            Phone: 856-465-3345<br>
+                            Email: <a href="mailto:parsons.adamj@gmail.com"
+                                class='text-white-50'>parsons.adamj@gmail.com</a>
+                        </address>
+                    </div>
+                    <div class="col">
+                        <p>
+                            <a href="https://github.com/ravalash" class='text-white-50' target="_blank">Github
+                                Profile</a><br>
+                            <a href="https://www.linkedin.com/in/parsonsadamj" class='text-white-50'
+                                target="_blank">LinkedIn
+                                Profile</a>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <p>
+                            <a href="assets/Adam Parsons Resume.pdf" class='text-white-50' target="_blank">Resume</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </footer>
     </div>
